@@ -32,6 +32,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 #include <stdlib.h>
 #include <string.h>
 
+#include "sdld.h"
 #include "lk_readnl.h"
 #include "aslink.h"
 #include "lklibr.h"
